<resources>
    <string name="app_name">VID</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="url">www.vid.com</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbacktitle">Enter feedback details to developer:</string>
    <string name="feedbackname">Your name</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbacktype">Type</string>
    <string name="feedbackbody">Feedback details…</string>
    <string name="feedbackresponse">Would you like an email response?</string>
    <string name="feedbackbutton"> Send Feedback </string>
    <string name="login">Login</string>
    <string name="ec">EC</string>
    <string name="back">Send</string>
    <string name="education">Education</string>
    <string name="hajj">Hajj</string>
    <string name="information_details">Information Details</string>
    <string name="bank">Bank</string>
    <string name="law">Law</string>
    <string name="marriage">Marriage</string>
    <string name="nid">NID</string>
    <string name="passport">Passport</string>
    <string name="police">Police</string>
    <string name="properties">Properties</string>
    <string name="social">Social</string>
    <string name="birth">Birth</string>
    <string name="others">Others</string>
    <string name="visa">Visa</string>
    <string name="tax">Tax</string>
    <string name="insurance">Insurance</string>
    <string name="driving">Driving</string>
    <string name="information">Information</string>
    <string name="sign_up">Sign Up</string>
    <string name="father_s_name">Father\'s Name:</string>
    <string name="name">Name:</string>
    <string name="mother_s_name">Mother\'s Name:</string>
    <string name="permanent_address">Permanent Address:</string>
    <string name="spouse_s_name">Spouse\'s Name:</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="relationship">Relationship:</string>
    <string name="address">Address:</string>
    <string name="telephone_no">Telephone No:</string>
    <string name="surname">Surname:</string>
    <string name="given_name">Given Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="sex">Sex:</string>
    <string name="date_of_issue">Date of Issue:</string>
    <string name="date_of_expiry">Date of Expiry:</string>
    <string name="personal_no">Personal No:</string>
    <string name="na">NA</string>
    <string name="school_name">School Name:</string>
    <string name="ssc">SSC:</string>
    <string name="hsc">HSC:</string>
    <string name="honers_bsc">Honers/BSC</string>
    <string name="roll">Roll:</string>
    <string name="registration">Registration:</string>
    <string name="year">Year:</string>
    <string name="session">Session:</string>
    <string name="result">Result:</string>
    <string name="board">Board:</string>
    <string name="group">Group:</string>
    <string name="collage_name">Collage Name:</string>
    <string name="passing_year">Passing Year:</string>
    <string name="name_of_university">Name of University:</string>
    <string name="department">Department:</string>
    <string name="id">ID:</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="blood_group">Blood Group:</string>
    <string name="father_husband_name">Father/Husband Name:</string>
    <string name="present_address">Present Address:</string>
    <string name="driving_license_category">Driving License Category:</string>
    <string name="nid_s">NID:</string>
    <string name="ec_voting_address">Ec Voting Address:</string>
    <string name="ec_zone">EC Zone:</string>
    <string name="ec_serial_no">EC Serial No:</string>
    <string name="id_no">ID No:</string>
    <string name="ok">OK</string>
    <string name="issue_date">Issue Date:</string>
    <string name="police_records">Police Records:</string>
    <string name="nationality">Nationality:</string>
    <string name="date_birth">Date of birth</string>
    <string name="check">Check</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="institute_name">Institute name</string>
    <string name="want_to_access">Want to access</string>
    <string name="_2_education_certificate">2. Education Certificate</string>


    <string-array name="institute_name">
        <item>Ahsanullah University of Science and Technology</item>
        <item>American International University Bangladesh (AIUB)</item>
        <item>AB Bank Limited</item>
        <item>Bangladesh University of Engineering and Technology</item>
        <item>BRAC University</item>
        <item>Daffodil International University</item>
        <item>Dhaka Bank Limited</item>
        <item>Dutch-Bangla Bank Limited</item>
        <item>East West University</item>
        <item>Independent University Bangladesh (IUB)</item>
        <item>Jahangirnagar University</item>
        <item>National Bank Limited</item>
        <item>North South University (NSU)</item>
        <item>The University of Asia Pacific</item>
        <item>Trust Bank Limited</item>
        <item>University of Dhaka</item>
        <item>Uttara Bank Limited</item>

    </string-array>

    <string-array name="university_name">
        <item>Ahsanullah University of Science and Technology</item>
        <item>American International University Bangladesh (AIUB)</item>
        <item>Bangladesh University of Engineering and Technology</item>
        <item>BRAC University</item>
        <item>Daffodil International University</item>
        <item>East West University</item>
        <item>Independent University Bangladesh (IUB)</item>
        <item>Jahangirnagar University</item>
        <item>North South University (NSU)</item>
        <item>The University of Asia Pacific</item>
        <item>University of Dhaka</item>

    </string-array>

</resources>
