<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".vid.Activity.BirthActivity"
    android:background="@color/Wheat"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/passportPageId"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        card_view:cardElevation="15dp"
        card_view:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/SkyBlue"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/birth"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/birth"
                android:textSize="30sp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/White"
                android:textStyle="bold"/>


        </LinearLayout>

        <Button
            android:id="@+id/backButtonId"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/back"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/button_background"
            />


    </android.support.v7.widget.CardView>


</LinearLayout>