<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/Wheat"
    android:orientation="vertical"
    tools:context=".vid.Activity.EcActivity"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/passportPageId"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        card_view:cardElevation="15dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/Tomato"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/ec"
                android:contentDescription="@string/ec" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/ec"
                android:textSize="30sp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/White"
                android:textStyle="bold"/>
         </LinearLayout>


    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/name"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        />
                    <TextView
                        android:id="@+id/eNameId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.25"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/nid_s"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/eNidId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.25"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/date_of_birth"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/eBirthDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.25"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/ec_zone"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/eEcZoneId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.25"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/ec_serial_no"
                        android:gravity="start|center_vertical"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/ecSerialNoId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:text="@string/ec_voting_address"
                        android:gravity="start|center_vertical"
                        android:layout_gravity="center"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/ecVotingAddressId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:hint="@string/na"
                        android:gravity="start|center_vertical"
                        android:textColor="#000"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        />


                </LinearLayout>



            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>


</LinearLayout>