<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteSmoke"
    tools:context="com.example.explorer.vid.start.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:src="@drawable/ict"
        android:layout_margin="20dp"
        android:layout_gravity="top"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:cardElevation="2dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:id="@+id/logInEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="top"
            android:hint="@string/email"
            android:textColor="@color/Teal"
            android:textColorHint="@color/md_green_400"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"/>

        <!-- Password -->


        <EditText
            android:id="@+id/logInPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:textColor="@color/Teal"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/md_green_400"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_black_24dp"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressbarId"
            android:visibility="gone"
            />

    </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:id="@+id/cardViewIdLogIn"
            android:onClick="loginActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/SeaGreen"
            android:layout_gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="25sp"
                android:padding="10dp"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>
        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:onClick="ForgotPassword"
            android:padding="@dimen/mdtp_material_button_textsize"
            android:text="@string/forgot_password"
            android:textColor="@color/RoyalBlue"
            android:textSize="15sp"
            android:theme="@style/AppTheme"/>
        <!-- Sign up -->
        <TextView
            android:onClick="AddNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new user"
            android:textColor="@color/RoyalBlue"
            android:layout_gravity="center"
            android:theme="@style/AppTheme"
            android:layout_marginBottom="20dp"
            tools:ignore="OnClick"
            android:textSize="15sp"
            android:padding="@dimen/mdtp_material_button_textsize"/>

    </LinearLayout>
</ScrollView>
