<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/Wheat"
    tools:context=".vid.Activity.PropertiesActivity"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        card_view:cardElevation="15dp"
        card_view:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/Coral"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/properties"
                android:padding="5dp"
                android:contentDescription="@string/information_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/properties"
                android:textSize="30sp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/White"
                android:textStyle="bold"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Property Category"
                            android:gravity="start|center_vertical"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />
                        <TextView
                            android:id="@+id/propertyCategoryId"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/na"
                            android:gravity="start|center_vertical"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Property Details:"
                            android:gravity="start|center_vertical"
                            android:layout_gravity="center"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />
                        <TextView
                            android:id="@+id/propertyDetailsId"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/na"
                            android:gravity="start|center_vertical"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Property Buying Date: "
                            android:gravity="start|center_vertical"
                            android:layout_gravity="center"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />
                        <TextView
                            android:id="@+id/propertyBuyDateId"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/na"
                            android:gravity="start|center_vertical"
                            android:textColor="#000"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />


                    </LinearLayout>





                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>



    </ScrollView>


</LinearLayout>
